# external-ip-service

./: .gitignore  .pre-commit-config.yaml  .prototools  LICENSE  README.md  pyproject.toml  uv.toml
.moon/: workspace.yml
.moon/hooks/: pre-commit.sh
apps/cli/: README.md  main.py  moon.yml  pyproject.toml
apps/cli/extip/commands/: client.py  service.py
apps/cli/src/extip/: cli.py  service.py
apps/cli/src/extip/commands/: client.py  service.py
apps/cli/src/extip/services/: server_service.py
apps/cli/src/extip/utils/: __init__.py
apps/cli/tests/: test_utils.py
apps/polybar_client/: moon.yml  pyproject.toml
apps/polybar_client/src/polybar_client/: __init__.py
apps/service/: .gitignore  README.md  moon.yml  pyproject.toml
apps/service/src/external_ip_service/: __init__.py  settings.py
docs/: apps.md
libs/redis_connector/: .editorconfig  .uv  pyproject.toml
libs/redis_connector/src/redis_connector/: __init__.py
