[project]
name = "external-ip-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tim Mironov", email = "timirlan666@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
external-ip-service = "external_ip_service:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
