[project]
name = "external-ip-service"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Tim Mironov", email = "timirlan666@gmail.com" }]
requires-python = ">=3.14,<4.0"
dependencies = ["loguru>=0.7.3", "redis-connector", "pydantic-settings (>=2.11.0,<3.0.0)"]

[project.scripts]
external-ip-service = "external_ip_service:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pre-commit>=4.3.0", "ruff>=0.14.0"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "I", "T", "ANN"]
extend-select = ["E501", "E722", "E741"]
ignore = ["ANN401", "ANN002", "ANN003"]

[tool.uv.sources]
redis-connector = { path = "../../libs/redis_connector", editable = true }
