[project]
name = "redis-coonector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tim Mironov", email = "timirlan666@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "redis>=6.4.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
]
