[project]
name = "redis-connector"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Tim Mironov", email = "timirlan666@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["pydantic>=2.12.2", "redis>=6.4.0"]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pre-commit>=4.3.0", "ruff>=0.14.0"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "I", "T", "ANN"]
extend-select = ["E501", "E722", "E741"]
ignore = ["ANN401", "ANN002", "ANN003"]
